src/snapshots/insta_cmd__basic.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - Hello World
---
success: true
exit_code: 0
----- stdout -----
Hello World

----- stderr -----

