src/snapshots/insta_cmd__command.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - Just some stuff
---
success: true
exit_code: 0
----- stdout -----
Just some stuff

----- stderr -----

