src/snapshots/insta_cmd__env.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - Just some stuff
  env:
    A: B
    K: V
    Y: Z
---
success: true
exit_code: 0
----- stdout -----
Just some stuff

----- stderr -----
