src/snapshots/insta_cmd__env_remove_vs_empty.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - Testing env
  env:
    EMPTY_VAR: ""
---
success: true
exit_code: 0
----- stdout -----
Testing env

----- stderr -----
