src/snapshots/insta_cmd__failure.snap
---
source: src/lib.rs
info:
  program: "false"
  args: []
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----

