src/snapshots/insta_cmd__named_snapshot_with_trailing_comma.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - "27"
---
success: true
exit_code: 0
----- stdout -----
27

----- stderr -----
