src/snapshots/insta_cmd__pass_stdin.snap
---
source: src/lib.rs
info:
  program: cmd
  args:
    - /c
    - find
    - /v
    - "\"\""
  stdin: "Hello World!\n"
---
success: true
exit_code: 0
----- stdout -----
Hello World!

----- stderr -----

