src/snapshots/insta_cmd__stdin.snap
---
source: src/lib.rs
info:
  program: cat
  args: []
  stdin: Hello World!
---
success: true
exit_code: 0
----- stdout -----
Hello World!
----- stderr -----

