src/snapshots/insta_cmd__trailing_comma_one_arg.snap
---
source: src/lib.rs
info:
  program: echo
  args:
    - "42"
---
success: true
exit_code: 0
----- stdout -----
42

----- stderr -----
